--- a/payrollapp/templates/login.html
+++ b/payrollapp/templates/login.html
@@ -3,18 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>homepage</title>
+    <title>login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container">
-    <h1>landing page</h1>
-    <p>signup or login for access</p>
-    <div class="container">
-        <a class="btn btn-primary ml-5" href="/login" role="button">Login</a>
-        <a class="btn btn-primary mr-5" href="/signup" role="button">Signup</a>
-    </div>
-</div>
+    <h1>login page</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
