--- a/payrollapp/templates/home.html
+++ b/payrollapp/templates/home.html
@@ -7,14 +7,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container">
-    <h1>landing page</h1>
-    <p>signup or login for access</p>
-    <div class="container">
-        <a class="btn btn-primary ml-5" href="/login" role="button">Login</a>
-        <a class="btn btn-primary mr-5" href="/signup" role="button">Signup</a>
-    </div>
-</div>
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }} alert-warning alert-dismissible fade show" role="alert">
+        <strong>Message : </strong> {{ message }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+      {% endfor %}
+
+
+    <h1>wecome to login page</h1>
+
+
+    {% if user.is_authenticated %}
+    <h1>hello , {{ first_name }} </h1>
+    <h1>You are successfully logged in </h1>
+    <a href="/signout" class="btn btn-primary">SignOut</a>
+    {% else %}
+    <a href="/signup" class="btn btn-primary">SignUp</a>
+    <a href="/loginu" class="btn btn-primary">login</a>
+   {% endif %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
